uefi-macros/tests/ui/fail/entry_bad_arg.rs
#![no_main]

use uefi::prelude::*;

#[entry]
fn main(_x: usize) -> Status {
    Status::SUCCESS
}
